# sn-hfsm-1

./: .gitignore  README.md  time.txt
WX/: README.MD  quag.sh
WX/bow/: README.MD  uvinit.sh
WX/bow/br1/: README.md  buty.py  main.py  pyproject.toml
WX/gcc/: README.MD  gem.sh
WX/hfs/: README.MD  uvinit.sh
WX/hfs/h1/: README.md
WX/hfs/h2/: buty.py  main.py  pyproject.toml  runz.sh
WX/rov/: README.MD  rovo.sh
WX/rov/r1/: GUIDANCE.MD
WX/tez/: rules.txt  security_audit_report.md
WX/tez/silo-contracts-v2/: .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  KnownIssues.md  MOREDOCS.md  Makefile  README.md  foundry.toml  lcov.info  package.json  remappings.txt
WX/vol/: README.MD  uvinit.sh  vols.sh
WX/vol/github-repo-analyzer/: README.md  package.json  pnpm-lock.yaml
WX/vol/vo1/: README.md  package.json  pnpm-lock.yaml
mx-kz-ytml-2/: .gitignore  README.md  l  time.txt  tokeihelp.txt
mx-kz-ytml-2/WX/: README.MD  uvinit.sh
mx-kz-ytml-2/WX/agz/: README.MD  uvinit.sh
mx-kz-ytml-2/WX/agz/tu1/: README.md  buty.py  pyproject.toml  resp.txt
mx-kz-ytml-2/WX/agz/tu1/src/: t1.py  utz.py
mx-kz-ytml-2/WX/hfs/: README.MD
mx-kz-ytml-2/WX/hfs/h2/: README.md  buty.py  main.py  pyproject.toml
mx-kz-ytml-2/WX/hfs/h2/rez/: llama_3.3_70b_versatile_2025-06-23_14-42-40.md  llama_3.3_70b_versatile_2025-06-24_09-47-25.md  openai_gpt-4.1_2025-06-24_11-59-23.md
mx-kz-ytml-2/WX/hfs/h2/src/: a1.py
mx-kz-ytml-2/WX/hfs/h2/srcold/: gq1.py
mx-kz-ytml-2/WX/tez/: README.MD
mx-kz-ytml-2/kz-ytml-1/: .gitignore  README.md  time.txt
sn/: lix.fish
(+1116 files in other folders)
