[project]
name = "h2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "dotenv>=0.9.9",
    "gradio[mcp]>=5.34.2",
    "groq>=0.28.0",
    "openai>=1.91.0",
    "rich>=14.0.0",
    "smolagents[toolkit]>=1.19.0",
]
